--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -12,6 +12,7 @@ INCLUDE_DIRECTORIES(${SDL2_PATH}/include)
 INCLUDE_DIRECTORIES(${GLEW_PATH}/include)
 
 INCLUDE_DIRECTORIES(./../include)
+INCLUDE_DIRECTORIES(./../thirdparty)
 
 IF(WIN32)
    	ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
@@ -24,12 +25,12 @@ ELSE()
 ENDIF()
 
 ADD_EXECUTABLE (${PROJECT_NAME} main.cpp platform_sdl.cpp platform_sdl.h)
-TARGET_LINK_LIBRARIES( ${PROJECT_NAME} SDL2 SDL2main glew_s ${OpenGL_LIBRARY} imgui)
+TARGET_LINK_LIBRARIES( ${PROJECT_NAME} SDL2 SDL2main glew_s ${OpenGL_LIBRARY} glw_imgui)
 
 IF(WIN32)
     # copy SDL dll near demo.exe
-	ADD_CUSTOM_COMMAND(TARGET ${PROJECT_NAME} POST_BUILD       
-		COMMAND ${CMAKE_COMMAND} -E copy_if_different  			
+	ADD_CUSTOM_COMMAND(TARGET ${PROJECT_NAME} POST_BUILD
+		COMMAND ${CMAKE_COMMAND} -E copy_if_different
 			"${CMAKE_CURRENT_BINARY_DIR}/thirdparty/SDL2/$<CONFIGURATION>/SDL2.dll"
 			$<TARGET_FILE_DIR:${PROJECT_NAME}>)
 ENDIF()
