--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -8,6 +8,7 @@ SET(SDL_STATIC OFF)
 ADD_SUBDIRECTORY(${SDL2_PATH})
 ADD_SUBDIRECTORY(${GLEW_PATH}/build/cmake)
 
+INCLUDE_DIRECTORIES(thirdparty)
 INCLUDE_DIRECTORIES(${SDL2_PATH}/include)
 INCLUDE_DIRECTORIES(${GLEW_PATH}/include)
 
