initial keyboard support - focus by keys, additional state for widgets

--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -4,6 +4,10 @@ SET( SDL2_PATH thirdparty/SDL2)
 SET( GLEW_PATH thirdparty/glew)
 
 SET(SDL_STATIC OFF)
+SET(BUILD_UTILS OFF)
+
+SET( INSTALL_DIR ${CMAKE_CURRENT_SOURCE_DIR}/install )
+SET( ASSETS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/assets )
 
 ADD_SUBDIRECTORY(${SDL2_PATH})
 ADD_SUBDIRECTORY(${GLEW_PATH}/build/cmake)
@@ -26,12 +30,15 @@ ELSE()
 ENDIF()
 
 ADD_EXECUTABLE (${PROJECT_NAME} main.cpp platform_sdl.cpp platform_sdl.h)
-TARGET_LINK_LIBRARIES( ${PROJECT_NAME} SDL2 SDL2main glew_s ${OpenGL_LIBRARY} glw_imgui)
+TARGET_LINK_LIBRARIES( ${PROJECT_NAME} SDL2-static SDL2main glew_s ${OpenGL_LIBRARY} glw_imgui)
 
-IF(WIN32)
-    # copy SDL dll near demo.exe
-	ADD_CUSTOM_COMMAND(TARGET ${PROJECT_NAME} POST_BUILD
-		COMMAND ${CMAKE_COMMAND} -E copy_if_different
-			"${CMAKE_CURRENT_BINARY_DIR}/thirdparty/SDL2/$<CONFIGURATION>/SDL2.dll"
-			$<TARGET_FILE_DIR:${PROJECT_NAME}>)
-ENDIF()
+#IF(WIN32)
+#    # copy SDL dll near demo.exe
+#	ADD_CUSTOM_COMMAND(TARGET ${PROJECT_NAME} POST_BUILD
+#		COMMAND ${CMAKE_COMMAND} -E copy_if_different
+#			"${CMAKE_CURRENT_BINARY_DIR}/thirdparty/SDL2/$<CONFIGURATION>/SDL2.dll"
+#			$<TARGET_FILE_DIR:${PROJECT_NAME}>)
+#ENDIF()
+
+INSTALL (TARGETS ${PROJECT_NAME} DESTINATION ${INSTALL_DIR})
+INSTALL (FILES  ${ASSETS_DIR}/DroidSans.ttf DESTINATION ${INSTALL_DIR})
