--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,8 @@ IF (GLW_IMGUI_DEMO)
 	ADD_SUBDIRECTORY(demo)
 ENDIF()
 
+SET(BUILD_SHARED_LIBS FALSE)
+
 IF(UNIX)
     SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11")
 ENDIF()
