button active color fix

--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -6,8 +6,9 @@ SET( GLEW_PATH thirdparty/glew)
 SET(SDL_STATIC OFF)
 SET(BUILD_UTILS OFF)
 
-SET( INSTALL_DIR ${CMAKE_CURRENT_SOURCE_DIR}/install )
-SET( ASSETS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/assets )
+SET(INSTALL_DIR ${CMAKE_CURRENT_SOURCE_DIR}/install)
+SET(ASSETS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/assets)
+SET(CMAKE_INSTALL_PREFIX ${INSTALL_DIR})
 
 ADD_SUBDIRECTORY(${SDL2_PATH})
 ADD_SUBDIRECTORY(${GLEW_PATH}/build/cmake)
