build is fixed for install phase of glew by setting vars in cache

--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -3,8 +3,8 @@ PROJECT(demo)
 SET( SDL2_PATH thirdparty/SDL2)
 SET( GLEW_PATH thirdparty/glew)
 
-SET(SDL_STATIC OFF)
-SET(BUILD_UTILS OFF)
+SET(SDL_STATIC OFF CACHE BOOL "build sdl static library")
+SET(BUILD_UTILS OFF CACHE BOOL "build glew utils")
 
 SET(INSTALL_DIR ${CMAKE_CURRENT_SOURCE_DIR}/install)
 SET(ASSETS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/assets)
