--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 INCLUDE(CMakeToolsHelpers OPTIONAL)
 PROJECT(imgui)
 
-SET(GLW_IMGUI_DEMO "GLW_IMGUI_DEMO" CACHE STRING "Build demo app")
+SET(GLW_IMGUI_DEMO ON CACHE BOOL "build imgui demo")
 
 IF(UNIX)
     SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11")
