fixes for linux and macos build - sdl is linked from a system folders now for linux and macos

--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -1,22 +1,17 @@
-CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
+CMAKE_MINIMUM_REQUIRED(VERSION 2.7)
 PROJECT(demo)
-SET( SDL2_PATH thirdparty/SDL2)
-SET( GLEW_PATH thirdparty/glew)
 
-SET(SDL_STATIC ON CACHE BOOL "build sdl static library")
+SET( GLEW_PATH thirdparty/glew)
 SET(BUILD_UTILS OFF CACHE BOOL "build glew utils")
 
 SET(INSTALL_DIR ${CMAKE_CURRENT_SOURCE_DIR}/install)
 SET(ASSETS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/assets)
 SET(CMAKE_INSTALL_PREFIX ${INSTALL_DIR})
 
-ADD_SUBDIRECTORY(${SDL2_PATH})
+INCLUDE_DIRECTORIES(${GLEW_PATH}/include)
 ADD_SUBDIRECTORY(${GLEW_PATH}/build/cmake)
 
 INCLUDE_DIRECTORIES(thirdparty)
-INCLUDE_DIRECTORIES(${SDL2_PATH}/include)
-INCLUDE_DIRECTORIES(${GLEW_PATH}/include)
-
 INCLUDE_DIRECTORIES(./../include)
 INCLUDE_DIRECTORIES(./../thirdparty)
 
@@ -26,20 +21,27 @@ ENDIF()
 
 IF (APPLE)
 	FIND_LIBRARY(OpenGL_LIBRARY OpenGL)
+ELSEIF(UNIX)
+	SET(OpenGL_LIBRARY GL)
 ELSE()
+	# let's try to build SDL from source
+	SET(SDL2_PATH thirdparty/SDL2)
+	SET(SDL_STATIC ON CACHE BOOL "build sdl static library")
+	SET(SDL_SHARED OFF CACHE BOOL "build sdl shared library")
+	ADD_SUBDIRECTORY(${SDL2_PATH})
+	SET(SDL2_LIBRARIES SDL2-static SDL2main)
 	SET(OpenGL_LIBRARY opengl32)
+	INCLUDE_DIRECTORIES(${SDL2_PATH}/include)
+ENDIF()
+
+IF (APPLE OR UNIX)
+	FIND_PACKAGE(SDL2 REQUIRED)
+	INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS})
+	STRING(STRIP "${SDL2_LIBRARIES}" SDL2_LIBRARIES)
 ENDIF()
 
 ADD_EXECUTABLE (${PROJECT_NAME} main.cpp platform_sdl.cpp platform_sdl.h)
-TARGET_LINK_LIBRARIES( ${PROJECT_NAME} SDL2-static SDL2main glew_s ${OpenGL_LIBRARY} glw_imgui)
-
-#IF(WIN32)
-#    # copy SDL dll near demo.exe
-#	ADD_CUSTOM_COMMAND(TARGET ${PROJECT_NAME} POST_BUILD
-#		COMMAND ${CMAKE_COMMAND} -E copy_if_different
-#			"${CMAKE_CURRENT_BINARY_DIR}/thirdparty/SDL2/$<CONFIGURATION>/SDL2.dll"
-#			$<TARGET_FILE_DIR:${PROJECT_NAME}>)
-#ENDIF()
+TARGET_LINK_LIBRARIES( ${PROJECT_NAME}  glew_s ${SDL2_LIBRARIES} ${OpenGL_LIBRARY} glw_imgui)
 
 INSTALL (TARGETS ${PROJECT_NAME} DESTINATION ${INSTALL_DIR})
 INSTALL (FILES  ${ASSETS_DIR}/DroidSans.ttf DESTINATION ${INSTALL_DIR})
