initial graph support, texture rendering in demo

--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -46,3 +46,4 @@ TARGET_LINK_LIBRARIES( ${PROJECT_NAME}  glew_s ${SDL2_LIBRARIES} ${OpenGL_LIBRAR
 INSTALL (TARGETS ${PROJECT_NAME} DESTINATION ${INSTALL_DIR})
 INSTALL (FILES  ${ASSETS_DIR}/DroidSans.ttf DESTINATION ${INSTALL_DIR})
 INSTALL (FILES  ${ASSETS_DIR}/default.theme DESTINATION ${INSTALL_DIR})
+INSTALL (FILES  ${ASSETS_DIR}/texture.jpg DESTINATION ${INSTALL_DIR})
