--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,10 @@ jobs:
     
     steps:
     - uses: actions/checkout@v1
+    - name: apt-add-repo
+      run: sudo add-apt-repository -y "deb http://archive.ubuntu.com/ubuntu `lsb_release -sc` main universe restricted multiverse"
+    - name: apt_get_update
+      run: sudo apt-get update -y -qq
     - name: install_dependencies
       run: sudo apt-get install libsdl2-dev
     - name: configure
